https://unit.atlassian.net/browse/NP-45072 gradle https://unit.atlassian.net/browse/NP-45046 java